# notion-api-sample

./: pyproject.toml
notion_api/: __init__.py  create.py
notion_api/blocks/: block_element.py  clumn.py  paragraph.py
notion_api/ocr/: detection.py
